--- a/FullstackProsjekt/src/frontend/src/assets/main.css
+++ b/FullstackProsjekt/src/frontend/src/assets/main.css
@@ -3,3 +3,70 @@ body {
     margin: 0 0 0 27px;
     background-color: #F2F2F2;
 }
+.table{
+    width: 450px;
+    padding: 10px;
+    background-color: #dcdcdc;
+}
+
+.play-btn{
+    height: 25px;
+    padding: 5px;
+    text-decoration: none;
+    background-color: #242F40;
+    border-color: transparent;
+    color: #FFFFFF;
+}
+.edit-btn{
+    height: 25px;
+    padding: 5px;
+    text-decoration: none;
+    background-color: #CCA43B;
+    border-color: transparent;
+    color: #242F40;
+}
+.delete-btn{
+    height: 25px;
+    padding: 5px;
+    text-decoration: none;
+    background-color: #cc513b;
+    border-color: transparent;
+    color: #242F40;
+}
+.create-question-btn{
+    padding: 20px;
+    margin: 10px;
+    background-color: #242F40;
+    color: #F2F2F2;
+}
+.save-question-btn{
+    padding: 20px;
+    margin: 10px;
+    background-color: #CCA43B;
+}
+
+.add-Btn{
+    background-color: #242F40;
+    color: white;
+    font-size: 16px;
+    padding: 6px;
+    border-radius: 15px;
+    border-color: transparent;
+}
+.close-btn{
+    background-color: #cc513b;
+    padding: 10px;
+    border-radius: 5px;
+    border-color: transparent;
+}
+
+.submit-btn{
+    background-color: #D9C590;
+    padding: 10px;
+    border-radius: 5px;
+    border-color: transparent;
+}
+
+
+
+
