--- a/FullstackProsjekt/src/frontend/src/assets/main.css
+++ b/FullstackProsjekt/src/frontend/src/assets/main.css
@@ -3,6 +3,11 @@ body {
     margin: 0 0 0 27px;
     background-color: #F2F2F2;
 }
+.space{
+    margin: 100px;
+
+}
+
 .table{
     width: 450px;
     padding: 10px;
