--- a/FullstackProsjekt/src/frontend/src/assets/main.css
+++ b/FullstackProsjekt/src/frontend/src/assets/main.css
@@ -3,11 +3,24 @@ body {
     margin: 0 0 0 27px;
     background-color: #F2F2F2;
 }
+input {
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    min-width: 220px;
+    background-color: #E5E5E5;
+    margin: 10px;
+    font-family: monospace;
+}
+
+input::placeholder {
+    color: #b0b0b0;
+}
+
 
 .space{
     margin: 100px;
 }
-
 
 .row{
     margin-top: 5%;
@@ -25,6 +38,13 @@ body {
 }
 .course-col:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.3);
+}
+
+.error-message{
+    color: #e53a1c;
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 20px;
 }
 
 
@@ -89,11 +109,21 @@ body {
 
 .submit-btn{
     background-color: #CCA43B;
-    font-size: 16px;
-    padding: 10px;
+    font-size: 20px;
+    padding: 20px;
     border-radius: 5px;
     border-color: transparent;
-    margin-left: 130px;
+    min-width: 160px;
+    font-family: monospace;
+    transition: 0.2s;
+
+}
+.submit-btn:hover{
+    background-color: #a67d0e;
+}
+.submit-btn:active{
+    background-color: #2D333B;
+    color: white;
 }
 
 @media (max-width: 700px){
