--- a/FullstackProsjekt/src/frontend/src/assets/main.css
+++ b/FullstackProsjekt/src/frontend/src/assets/main.css
@@ -135,12 +135,18 @@ select{
 }
 
 .close-btn{
-    background-color: #cc513b;
+    background-color: #d2442b;
     padding: 10px;
     border-radius: 5px;
     border-color: transparent;
     margin-left: 10px;
     cursor: pointer;
+    font-family: monospace;
+    font-size: 16px;
+    color: white;
+}
+.close-btn:hover {
+    background-color: #e15238;
 }
 .submit-btn{
     background-color: #CCA43B;
