--- a/FullstackProsjekt/src/frontend/src/assets/main.css
+++ b/FullstackProsjekt/src/frontend/src/assets/main.css
@@ -8,7 +8,7 @@ input {
     padding: 5px;
     border-radius: 5px;
     border: none;
-    background-color: #E5E5E5;
+    background-color: #dedede;
     margin-bottom: 10px;
     font-family: monospace;
 }
@@ -24,8 +24,6 @@ label {
 select{
     font-family: monospace;
 }
-
-
 
 .space{
     margin: 90px;
