--- a/FullstackProsjekt/src/frontend/src/assets/main.css
+++ b/FullstackProsjekt/src/frontend/src/assets/main.css
@@ -8,8 +8,10 @@
     --field-placeholder: #b0b0b0;
     --field-background: #E5E5E5;
     --card-background: #d7d7d7;
+    --play-card-background: #f9f9f9;
+    --play-btn-hover: #e3e3e3;
 
-    --text-light-color: #d7d7d7;
+    --text-light-color: #eaeaea;
     --text-dark-color: #242F40;
 
     --danger-color:#d2442b;
